fixed homepage logo, messed up homepage alignment, added event calendar

--- a/styles.css
+++ b/styles.css
@@ -145,15 +145,24 @@ justify-content: center;
 /* Column container */
 .row {
   display: flex;
+  margin: 10px;
   flex-wrap: wrap;
+  margin-left: 15px;
+  margin-right:15px:
 }
 
-.column {
+.column_left {
   flex: 50%;
+  text-align: right;
 }
 
-.column img {
-  max-width: 90%;
+.column_right {
+  flex: 50%;
+  text-align: left;
+}
+
+.row img {
+  max-width: 80%;
 }
 
 .topbar {
